--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:mem:crollingdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.thymeleaf.prefix=classpath:/static/
