--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:crollingdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:crollingdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.datasource.url=jdbc:mysql://springboot-clone-db.ccshdimauk0v.ap-northeast-2.rds.amazonaws.com:3306/daangnclone
+spring.datasource.username=admin
+spring.datasource.password=admin1234
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
+spring.jpa.hibernate.globally_quoted_identifiers=true
+
+
+
 spring.thymeleaf.prefix=classpath:/static/
+
