--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@
 #spring.datasource.password=
 #spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-spring.datasource.url=jdbc:mysql://springboot-clone-db.ccshdimauk0v.ap-northeast-2.rds.amazonaws.com:3306/daangnclone
-spring.datasource.username=admin
-spring.datasource.password=admin1234
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://viva-db.cvoggurhiwh9.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
+spring.datasource.username=Viva
+spring.datasource.password=Aa1011303^^
+spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 spring.jpa.hibernate.globally_quoted_identifiers=true
