--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     // 스프링 시큐리티
+    implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
