--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:crollingdb
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:crollingdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-spring.datasource.url=jdbc:mysql://viva-db.cvoggurhiwh9.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
-spring.datasource.username=Viva
-spring.datasource.password=Aa1011303^^
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://viva-db.cvoggurhiwh9.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
+#spring.datasource.username=Viva
+#spring.datasource.password=Aa1011303^^
+#spring.jpa.hibernate.ddl-auto= create
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.jpa.show-sql=true
-spring.jpa.hibernate.globally_quoted_identifiers=true
+
 
 jwt.header=Authorization
 # HS512 알고리즘을 사용할 것이기 때문에 512bit, 즉 64byte 이상의 secret key를 사용해야 한다.
