--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:crollingdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:crollingdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-#spring.datasource.url=jdbc:mysql://viva-db.cvoggurhiwh9.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
-#spring.datasource.username=Viva
-#spring.datasource.password=Aa1011303^^
-#spring.jpa.hibernate.ddl-auto= create
+spring.datasource.url=jdbc:mysql://viva-db.cvoggurhiwh9.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
+spring.datasource.username=Viva
+spring.datasource.password=Aa1011303^^
+spring.jpa.hibernate.ddl-auto= update
 
 
 spring.jpa.show-sql=true
